fixed picture and text alignment

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body{
     flex-direction: row;
     justify-content: center;
     list-style: none;
-    gap: 50px;
+    gap: 60px;
     padding: 0;
     margin: 0;
 }
